--- a/g.html
+++ b/g.html
@@ -225,88 +225,52 @@
 
     <!-- Custom Script -->
     <script>
-        // Form validation
-        (function () {
-            'use strict';
-            const forms = document.querySelectorAll('.needs-validation');
-
-            Array.prototype.slice.call(forms).forEach(function (form) {
-                form.addEventListener('submit', function (event) {
-                    const inputFields = form.querySelectorAll('.form-control, .form-select');
-                    let valid = true;
-
-                    inputFields.forEach((field) => {
-                        const icon = field.nextElementSibling;
-
-                        if (!field.checkValidity()) {
-                            field.classList.add('invalid');
-                            field.classList.remove('valid');
-                            icon.classList.remove('success');
-                            valid = false;
-                        } else {
-                            field.classList.add('valid');
-                            field.classList.remove('invalid');
-                            icon.classList.add('success');
-                        }
-                    });
-
-                    if (!valid) {
-                        event.preventDefault();
-                        event.stopPropagation();
-                    }
-
-                    form.classList.add('was-validated');
-                }, false);
-            });
-        })();
-
-        // Function to format number with commas
-        function formatNumber(num) {
-            return num.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
-        }
-
-        document.getElementById('faceValue').addEventListener('input', function () {
-            // Remove non-digit characters
-            let value = this.value.replace(/[^0-9]/g, '');
-            // Format with commas
-            this.value = formatNumber(value);
+        // Animate Hamburger Menu
+        const toggler = document.querySelector('.navbar-toggler');
+        toggler.addEventListener('click', () => {
+            toggler.classList.toggle('collapsed');
         });
 
+        // Format input with commas as the user types in the face value field
+        const faceValueInput = document.getElementById('faceValue');
+        faceValueInput.addEventListener('input', function() {
+            let value = this.value.replace(/,/g, '');
+            this.value = new Intl.NumberFormat().format(value);
+        });
+
+        // Form validation and styling
         document.getElementById('bondForm').addEventListener('submit', function (event) {
             event.preventDefault();
+            validateForm();
+        });
 
-            // Get form values
-            const faceValue = parseFloat(document.getElementById('faceValue').value.replace(/,/g, '')); // Remove commas for calculation
-            const couponRate = parseFloat(document.getElementById('couponRate').value) / 100;
-            const yearsToMaturity = parseFloat(document.getElementById('yearsToMaturity').value);
-            const paymentFrequency = parseFloat(document.getElementById('paymentFrequency').value);
+        function validateForm() {
+            const formFields = document.querySelectorAll('#bondForm .form-control, #bondForm .form-select');
+            let isValid = true;
 
-            if (isNaN(faceValue) || isNaN(couponRate) || isNaN(yearsToMaturity) || isNaN(paymentFrequency)) {
-                alert('Please fill in all required fields.');
-                return;
-            }
+            formFields.forEach(field => {
+                const icon = field.nextElementSibling;
+                if (field.value.trim() === '') {
+                    field.classList.add('invalid');
+                    field.classList.remove('valid');
+                    icon.classList.remove('success');
+                    isValid = false;
+                } else {
+                    field.classList.add('valid');
+                    field.classList.remove('invalid');
+                    icon.classList.add('success');
+                }
+            });
 
-            // Calculate annual coupon payment
-            const annualCouponPayment = faceValue * couponRate;
+            return isValid;
+        }
 
-            // Calculate total interest over the life of the bond
-            const totalInterest = annualCouponPayment * yearsToMaturity;
-
-            // Total Bond Value (Face Value + Interest Earned)
-            const totalBondValue = faceValue + totalInterest;
-
-            // Total Future Value assuming reinvestment (basic example)
-            const totalFutureValue = faceValue * Math.pow((1 + couponRate / paymentFrequency), paymentFrequency * yearsToMaturity);
-
-            // Update modal content
-            document.getElementById('annualCoupon').innerText = `TZS ${formatNumber(annualCouponPayment.toFixed(2))}`;
-            document.getElementById('totalInterest').innerText = `TZS ${formatNumber(totalInterest.toFixed(2))}`;
-            document.getElementById('totalBondValue').innerText = `TZS ${formatNumber(totalBondValue.toFixed(2))}`;
-            document.getElementById('totalFutureValue').innerText = `TZS ${formatNumber(totalFutureValue.toFixed(2))}`;
-
-            // Show the modal
-            const resultModal = new bootstrap.Modal(document.getElementById('resultModal'));
-            resultModal.show();
+        // Real-time validation on input
+        const formFields = document.querySelectorAll('#bondForm .form-control, #bondForm .form-select');
+        formFields.forEach(field => {
+            field.addEventListener('input', () => {
+                validateForm();
+            });
         });
     </script>
 </body>
